# oceancvbench

./: README.md  __init__.py  benchmark.py  dataset_loader.py  huggingface_integration.py  hyperparameter_tuning.py  pyproject.toml  requirements.txt  setup.py
analytics/: __init__.py  class_balance_report.py
data_preprocessing/: __init__.py  augmentation.py  dataset_stats.py  outlier_detection.py  underrepresented_classes.py  val_set_workflow.py
evaluation/: __init__.py  evaluation.py  metrics.py  scoring.py
examples/: __init__.py  synthetic_data_generation.py
inference/: __init__.py  inference.py  localize.py  model_loader.py  postprocessing.py  preprocessing.py  yolo_integration.py
oceancvbench/: __init__.py  benchmark.py  optimization_config.py
oceancvbench/training/: __init__.py  training_pipeline.py
oceancvbench/utils/: __init__.py  common.py  huggingface_integration.py
utils/: __init__.py  common.py  dataset_handler.py  file_ops.py  huggingface_integration.py  plotting.py
